  window managers that support _NET_WM_STATE_FULLSCREEN
- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension
- added wxTextCtrl::SetSelection implementation for GTK+ 2
- fixed wxTextCtrl::IsEditable() for GTK+ 2
- don't consume 100% CPU when showing a poup menu

wxMac:

- generate wxEVT_SCROLL_THUMBRELEASE and wxEVT_SCROLLWIN_THUMBRELEASE events

wxMSW:

- possibility to use DIBs for wxBitmap implementation (Derry Bryson)
- wxStaticBitmap doesn't stretch its bitmap any longer (like other ports)
- support for accelerator keys in the owner drawn menus (Derry Bryson)
- wxCaret::SetSize() doesn't hide the caret any longer as it used to
- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not working with wxTR_MULTIPLE
- fixes for compilation with OpenWatcom compiler
- fixed wxStaticText best size calculation (was wrong by '&' width)
- fixed calling wxFrame::Maximize(FALSE) before the window is shown
= added wxNotebook::HitTest() (Otto Wyss)
- all libraries built with makefile.g95 have a _min or _cyg suffix
  (for MinGW and Cygwin)
- When using DLL, wxLocalFSHandler was not being exported - added WXEXPORTDLL
- A wxEvtHandler object was not removed from wxPendingEvents on deletion.
  wxPendingEventsLocker was being deleted in App before all wxEvtHandler
  objects have been destroyed resulting in stale handler/lock
  ptrs; fixed
- Windows XP manifest is now included in wx.rc; it is no longer neccessary
  to ship .exe.manifest file with applications to support XP themes
- wxLocale::Init no longer reports error if trying to set Unicode-only locale
  or if user's default locale is Unicode-only
- Improved border handling so it no longer shows a thin and
  sunken border under XP
- partial fix for wxNotebook pages looking bad under XP: wxUSE_UXTHEME
  enables XP theme engine code, and wxUSE_UXTHEME_AUTO tells