@@ -148,8 +148,8 @@ public:
     long InsertItem( long index, int imageIndex );
     long InsertItem( long index, const wxString& label, int imageIndex );
     long InsertColumn( long col, wxListItem& info );
-    long InsertColumn( long col, const wxString& heading, int format = wxLIST_FORMAT_LEFT,
-      int width = -1 );
+    long InsertColumn( long col, const wxString& heading,
+                       int format = wxLIST_FORMAT_LEFT, int width = -1 );
     bool ScrollList( int dx, int dy );
     bool SortItems( wxListCtrlCompare fn, long data );
     bool Update( long item );
@@ -168,6 +168,8 @@ public:
     void OnSize( wxSizeEvent &event );
 
     // We have to hand down a few functions
+    virtual void Refresh(bool eraseBackground = TRUE,
+                         const wxRect *rect = NULL);
 
     virtual void Freeze();
     virtual void Thaw();
